<resources>
    <string name="app_name">Currency App</string>
    <string name="main_screen_title">Главный экран</string>
    <string name="btn_fetch_rates">Вывести список доступных валют</string>

    <string name="selected_currency">Выбранная валюта: %s</string>
    <string name="enter_date_hint">Введите дату (ГГГГ-ММ-ДД)</string>
    <string name="btn_fetch_historical_rate">Получить исторический курс</string>
    <string name="historical_rate_placeholder">Курс: %.2f</string>
    <string name="detail_screen_description">
        На этом экране вы можете узнать исторический курс выбранной валюты по отношению к доллару США.
        Введите дату в формате ГГГГ-ММ-ДД, чтобы получить результат.
    </string>

    <string name="error_dialog_title">Ошибка</string>
    <string name="error_invalid_date">Пожалуйста, введите корректную дату.</string>
    <string name="error_network_unavailable">Нет подключения к интернету. Проверьте соединение.</string>
    <string name="error_server_message">Ошибка: %s</string>

    <string name="ok_button">OK</string>
    <string name="cache_source">Источник: Кэш</string>
    <string name="api_source">Источник: API</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_graph">Перейти к графику</string>
    <string name="point_count">Количество точек</string>
    <string name="numders">Значения через запятую</string>
    <string name="show_graph">Построить график</string>

    <string name="error_positive_number_required">Количество точек должно быть положительным числом</string>
    <string name="error_value_count_mismatch">Количество значений не совпадает с количеством точек</string>
    <string name="error_non_negative_values_required">Значения не должны быть отрицательными</string>

    <string name="notification_important_title">Новое уведомление</string>
    <string name="notification_important_default_message">Это важное уведомление</string>
    <string name="feature_open_denied">Для доступа войдите в аккаунт</string>
    <string name="feature_temporarily_unavailable">Функция временно недоступна</string>

    <string name="remote_config_disabled_toast">Функция заблокирована администратором</string>

    <string name="channel_important_notifications">Важные уведомления</string>
</resources>